# algo_agent

./: .gitignore  Quick Start.md  README.md  RUN.md  hacker_new.md  hgf_github.md  jd_4096.md  main.py  mypy.ini  pyproject.toml
.VSCodeCounter/2026-02-06_20-40-50-aella_api_req/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-07_01-53-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
data/01_hulk/: meta1.json  meta2.json  meta3-merge.json
data/01_hulk/02/: rule.json  (+1 more)
docs/: crashed.design.md  docker.md  error correction.design.md  functino_call_err.design.md  log.md  plan.design.md  plan_DAG.design.md  python.design.md  query.design.md  streamlit.md  subprocess.design.md  workspace_init.design.md
docs/01_first_version_design/: gen.md  module.design.md  pg.md  pydantic_schema.design.md  python.design.md  sql.md  sql2pd.design.md  tool_input_output.md  tool_router.design.md  workspace_create.design.md  踩坑记录.md
docs/02_devin/: choice.md  github-summary-prompt.md
docs/03_aella/: aella_request.py  paper_curl_bash_all.md  paper_curl_bash_valid.md
docs/03_web_search/: MCP.md  github.md  mcp_client.py
docs/04_github/: dump_tool_schema.py  mcp_client.py  search-github.json  search-github.md
docs/05_streamlit/: streamlit.md
docs/06_old_plot/: old_plot.md
docs/07_arxiv/: CrossRef_client.py  a.py  arXiv_paper_weblink.md
docs/08_or/: choice.md  packet.md  pip-url.md  suggest-prompt.md
docs/08_ortool/: deepwiki.md  filter.md  github.md  packet-url.md  pip.md  prompt.md  tmlrose.py
docs/09_promptX/: my_self_evolve.md  promptX.md
docs/10_MCP/: office_manual.md
docs/11_file_shell_mem/: example.md
docs/12_skill/: link.md  other_video.md  skill_github.md
docs/13_claude_code/: claude_code.md
docs/14_message_list/: msg_usage.py
docs/15_memory/: promptX.md
docs/16_vscode/: debug.md
docs/17_h_d_a/: 信息熵.md
docs/18_paper/: prompt  论文怎么写.md
docs/19_problem/: 01.T字街道死锁场景示意图.json  01.十字街道死锁场景示意图.json  02.十字街道死锁场景示意图.json  十字街区草图.pptx  启动提示词.md
docs/20_problem02/: rule.json  分析提示词.md  启动提示词.md
docs/21_problem03/: ref_plot.py  启动提示词.md
src/agent/: action.py  deep_research.py  deep_research_api.py  llm.py  llm_glm.py  memory.py  prompt.py  system_prompt.py  tool.py
src/agent_swarm/: summon.py
src/algorithms/: KMeans.py  all_summary.md  maximum_weight_bipartite_matching.py
src/mcp/: CallToolResult-mcp2.py  CallToolResult.py  mcp_2_tool.py  mcp_api.py  mcp_client.py  mcp_enum.py  mcp_mgr.py
src/runtime/: config.py  cwd.py  exec_runner.py  module_collector.py  module_config.py  python_executor.py  schemas.py  source_code.py  source_printer.py  subprocess_python_executor.py  subthread_python_executor.py  test.py  timer_recorder.py  workspace.py
src/ui/: start_view.py
src/utils/: __init__.py  create_folder.py  log_decorator.py  num_start_datetime.py  path_manager.py
tests/playground/: add_line_exception_traceback.py  async_yield.py  async_yield_cancel.py  basemodel_schame.py  cast.py  crashed.py  depandency.py  enum_type.py  excep.py  func_locals_globals_test.py  import_globals_locals.py  limit_test.py  log_parent.py  multi_import.py  orderDict_globals_locals.py  pip_uv.py  pydantic_copy.py  pydantic_schema.py  pydantic_test.py  st.py  subprocess_output.py  ws.py
tests/runtime/: python_executor_test.py
vision_mcp/: README.md  __init__.py  pyproject.toml  server.py  test_server.py  test_stdio.py
(+217 files in other folders)
