[project]
name = "algo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decorator>=5.2.1",
    "deepdiff>=8.6.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "inflection>=0.5.1",
    "matplotlib>=3.10.7",
    "mcp>=1.26.0",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "ortools>=9.15.6755",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "selenium>=4.39.0",
    "streamlit>=1.51.0",
    "wordcloud>=1.9.4",
]
